[tool.poetry]
name = "pyogmios"
version = "0.1.0"
description = ""
authors = ["Hareem Adderley <hareem@wavegp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^1.10.8"
aiohttp = "^3.8.4"
aiodns = "^3.0.0"
websocket-client = "^1.5.2"
promise = "^2.3"


[tool.poetry.group.dev.dependencies]
datamodel-code-generator = "^0.19.0"
black = "^22.6.0"
commitizen = "^2.32.5"
coverage = "^6.4.4"
Faker = "^15.3.4"
flake8 = "^5.0.4"
pylint = "^2.14.5"
pytest = "^7.1.3"
pytest-asyncio = "^0.20.3"
pytest-mock = "^3.8.2"
pydantic-factories = "^1.17.2"
ruff = "^0.0.261"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
